--- a/app/components/footer/footer.component.html
+++ b/app/components/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer id="footer">
   <div class="center">
     <p>
-      &copy; Master en frameworks para JavaScript - 2020 by Damián Vigo -
+      2020 &copy; Damián Vigo
     </p>
   </div>
 </footer>
