--- a/app/components/home/home.component.html
+++ b/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<app-slider [nombre]="'Bienvenido al curso de Angular'"> </app-slider> <!-- directiva input -->
+<app-slider [nombre]="'Bienvenido a mi blog en Angular'"> </app-slider> <!-- directiva input -->
 
 <div class="center">
   <section id="content">
