--- a/app/components/pelicula/pelicula.component.html
+++ b/app/components/pelicula/pelicula.component.html
@@ -1,9 +1,10 @@
-<article class="article-item" > <!-- por cada iteracion de peliculas creame un objeto pelicula. Imprimir el indice de la posicion i -->
+<article class="article-item">
   <div class="image-wrap">
     <img src="{{pelicula.image}}" alt="{{pelicula.title}}">
   </div>
 
-  <h2><!-- {{i}} --> {{pelicula.title}}</h2>
+  <h2>
+    <!-- {{i}} --> {{pelicula.title}}</h2>
   <span class="date">Hace 5 minutos</span>
 
   <span class="year" [ngClass]="{
