--- a/app/components/sidebar/sidebar.component.html
+++ b/app/components/sidebar/sidebar.component.html
@@ -1,15 +1,15 @@
-<aside id="sidebar">  
+<aside id="sidebar">
   <div id="nav-blog" class="sidebar-item">
-    <h3>Puedes hacer esto</h3>
-    <a [routerLink]="['/blog/crear']" class="btn btn-success">Crear artículo</a>
+    <h3>Crear artículo</h3>
+    <a [routerLink]="['/blog/crear']" class="btn btn-success">Comienza</a>
   </div>
   <div id="search" class="sidebar-item">
-    <h3>Buscador</h3>
-    <p>Encuentra el artículo que buscas</p>
+    <h3>Descubre</h3>
+    <p>Encuentra tu artículo</p>
     <form #searchFrom="ngForm" (ngSubmit)="goSearch()">
       <input type="text" name="search" [(ngModel)]="searchString">
       <input type="submit" name="submit" value="Buscar" class="btn">
     </form>
   </div>
-</aside>  
+</aside>
 <div class="clearfix"></div>
