--- a/app/components/header/header.component.html
+++ b/app/components/header/header.component.html
@@ -1,11 +1,10 @@
-
 <header id="header">
   <div class="center">
     <!-- LOGO -->
     <div id="logo">
       <img src="assets/images/angular.svg" class="app-logo" alt="Logotipo" />
       <span id="brand">
-        <strong>Curso</strong>Angular
+        <strong>Angular</strong>
       </span>
     </div>
     <!-- MENU -->
@@ -30,4 +29,4 @@
     </nav>
     <div class="clearfix"></div>
   </div>
-<header>
+  <header>
